--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hello-taro",
   "version": "1.0.0",
   "private": true,
-  "description": "hello",
+  "description": "a taro project",
   "templateInfo": {
     "name": "default",
     "typescript": true,
@@ -33,7 +33,7 @@
     "Android >= 4.1",
     "ios >= 8"
   ],
-  "author": "",
+  "author": "daskyrk",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.0.17",
